--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,15 +7,25 @@
     "mocha": true
   },
   "extends": [
-    "eslint:recommended"
+    "eslint:recommended",
+    "plugin:react/recommended"
   ],
   "parser": "babel-eslint",
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
   "plugins": [
+    "react"
   ],
   "rules": {
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
