--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@ushiboy/cyclone": "^0.2.0",
     "babel-eslint": "^10.0.1",
     "babel-preset-power-assert": "^3.0.0",
     "eslint": "^5.15.1",
+    "eslint-plugin-react": "^7.12.4",
     "mocha": "^6.0.2",
     "power-assert": "^1.6.1",
     "prettier": "^1.16.4",
