--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@ushiboy/cyclone": "^0.2.0",
     "babel-eslint": "^10.0.1",
     "babel-preset-power-assert": "^3.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.1",
     "eslint-plugin-react": "^7.12.4",
+    "jsdom": "^14.0.0",
     "mocha": "^6.0.2",
     "power-assert": "^1.6.1",
     "prettier": "^1.16.4",
