add peer dependencies

--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0-0",
+    "@ushiboy/cyclone": "^0.2.0"
   }
 }
