--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "React bindings for Cyclone",
   "main": "lib/index.js",
+  "repository": "https://github.com/ushiboy/react-cyclone",
   "files": [
     "src",
     "lib"
@@ -13,10 +14,14 @@
     "format": "prettier --single-quote --write 'src/**/*.js'",
     "test": "mocha --require src/testSetup.js --recursive './src/**/*.spec.js'",
     "clean": "rm -rf lib",
-    "build": "npm run clean && babel src --ignore 'src/**/*.spec.js' --ignore 'src/testSetup.js' --out-dir lib"
+    "build": "npm run clean && babel src --ignore 'src/**/*.spec.js' --ignore 'src/testSetup.js' --out-dir lib",
+    "prepublish": "npm run check && npm run build"
   },
   "author": "ushiboy",
   "license": "MIT",
+  "dependencies": {
+    "prop-types": "^15.7.2"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
@@ -35,7 +40,6 @@
     "mocha": "^6.0.2",
     "power-assert": "^1.6.1",
     "prettier": "^1.16.4",
-    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
